--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Blog App</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="lbl_text_blogs">%d blogs</string>
+    <string name="lbl_toolbar_authors">Authors</string>
+    <string name="lbl_toolbar_blogs">Blogs</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
